--- a/investix/index.html
+++ b/investix/index.html
@@ -48,7 +48,7 @@
                 <li><a href="#">Pro Program</a></li>
               </ul>
             </li>
-            <li><a href="#">Chat Room</a></li>
+            <li><a class="nav__chat" href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
             <li><a href="#">Contacts</a></li>
             <!-- <li> -->
@@ -68,7 +68,7 @@
           <p class="slider__desc">Pay only for trading education and receive<br>all the trading capital you need</p>
           <a class="button  button--small  slider__button" href="#">Get Started</a>
         </div>
-        <div class="slider__img"></div>
+        <div class="slider__img  slider__img--basic"></div>
       </div>
     </div>
     <div class="slider__box">
@@ -94,17 +94,17 @@
       <h1 class="services__title">We will show you the way!</h1>
       <p class="services__subtitle">Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
       <div class="services__flex">
-        <div class="services__box  services__box--intro">
+        <div class="services__box  services__box--basic">
           <p class="services__name">
-            <b>Intro</b>
+            <b>Basic</b>
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
           <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
         </div>
-        <div class="services__box  services__box--student">
+        <div class="services__box  services__box--advanced">
           <p class="services__name">
-            <b>Student</b>
+            <b>Advanced</b>
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
@@ -121,6 +121,14 @@
         <div class="services__box  services__box--pro">
           <p class="services__name">
             <b>Pro</b>
+            Program
+          </p>
+          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
+          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
+        </div>
+        <div class="services__box  services__box--ultimate">
+          <p class="services__name">
+            <b>Ultimate</b>
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
