--- a/investix/account-programs/account.html
+++ b/investix/account-programs/account.html
@@ -32,10 +32,11 @@
             <li>
               <a class="nav__active">Account Programs</a>
               <ul class="nav__sublist">
-                <li><a href="intro.html">Intro Program</a></li>
-                <li><a href="student.html">Student Program</a></li>
+                <li><a href="basic.html">Basic Program</a></li>
+                <li><a href="advanced.html">Advanced Program</a></li>
                 <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
+                <li><a href="ultimate.html">Ultimate Program</a></li>
               </ul>
             </li>
             <li>
@@ -527,10 +528,11 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="intro.html">Intro Program</a></li>
-          <li><a href="student.html">Student Program</a></li>
+          <li><a href="basic.html">Basic Program</a></li>
+          <li><a href="advanced.html">Advanced Program</a></li>
           <li><a href="expert.html">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
+          <li><a href="ultimate.html">Ultimate Program</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
