--- a/investix/index.html
+++ b/investix/index.html
@@ -33,21 +33,14 @@
             <li>
               <a href="account-programs/account.html">Account Programs</a>
               <ul class="nav__sublist">
-                <li><a href="account-programs/intro.html">Intro Program</a></li>
-                <li><a href="account-programs/student.html">Student Program</a></li>
+                <li><a href="account-programs/basic.html">Basic Program</a></li>
+                <li><a href="account-programs/advanced.html">Advanced Program</a></li>
                 <li><a href="account-programs/expert.html">Expert Program</a></li>
                 <li><a href="account-programs/pro.html">Pro Program</a></li>
+                <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
               </ul>
             </li>
-            <li>
-              <a href="#">Education</a>
-              <ul class="nav__sublist">
-                <li><a href="#">Intro Program</a></li>
-                <li><a href="#">Student Program</a></li>
-                <li><a href="#">Expert Program</a></li>
-                <li><a href="#">Pro Program</a></li>
-              </ul>
-            </li>
+            <li><a href="#">Education</a></li>
             <li><a class="nav__chat" href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
             <li><a href="#">Contacts</a></li>
@@ -437,10 +430,11 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="account-programs/intro.html">Intro Program</a></li>
-          <li><a href="account-programs/student.html">Student Program</a></li>
+          <li><a href="account-programs/basic.html">Basic Program</a></li>
+          <li><a href="account-programs/advanced.html">Advanced Program</a></li>
           <li><a href="account-programs/expert.html">Expert Program</a></li>
           <li><a href="account-programs/pro.html">Pro Program</a></li>
+          <li><a href="account-programs/ultimate.html">Ultimate Program</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
