--- a/investix/account-programs/account.html
+++ b/investix/account-programs/account.html
@@ -39,15 +39,7 @@
                 <li><a href="ultimate.html">Ultimate Program</a></li>
               </ul>
             </li>
-            <li>
-              <a href="#">Education</a>
-              <ul class="nav__sublist">
-                <li><a href="#">Intro Program</a></li>
-                <li><a href="#">Student Program</a></li>
-                <li><a href="#">Expert Program</a></li>
-                <li><a href="#">Pro Program</a></li>
-              </ul>
-            </li>
+            <li><a href="#">Education</a></li>
             <li><a href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
             <li><a href="#">Contacts</a></li>
@@ -67,42 +59,54 @@
         <small class="account-programs__subname">Pay only for your education, and recieve all the trading capital you need</small>
       </div>
     </section>
-    <section class="services  services--account">
+    <section class="services  services--account-programs  services--account">
       <div class="container">
         <div class="services__flex">
-          <div class="services__box  services__box--intro"></div>
-          <div class="services__box  services__box--student"></div>
+          <div class="services__box  services__box--basic"></div>
+          <div class="services__box  services__box--advanced"></div>
           <div class="services__box  services__box--expert"></div>
           <div class="services__box  services__box--pro"></div>
+          <div class="services__box  services__box--ultimate"></div>
         </div>
         <h1 class="services__title">We will show you the way!</h1>
         <p class="services__subtitle">Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
       </div>
     </section>
     <section class="account">
-      <div class="account__wrapper  account__wrapper--blue">
-        <div class="container">
+      <div class="container">
+        <div class="account__wrapper  account__wrapper--basic">
           <div class="account__flex">
-            <div class="account__img  account__img--intro">
-              <p><b>Intro</b> Program</p>
+            <div class="account__img  account__img--basic">
+              <p><b>Basic</b> Program</p>
             </div>
             <div class="account__desc">
               <b class="account__name">Description</b>
-              <p class="account__text">Tradenet's INTRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Tradenet's BASIC program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex">
-                <div class="account__box  account__box--self">
-                  <p>Self-Stude<br>Course</p>
+              <div class="account__flex  account__flex--edge">
+                <div class="account__box  account__box--video">
+                  <b>Unlimited Online Videos Lessons Pack 1+2</b>
                 </div>
-                <div class="account__box  account__box--chat">
-                  <p>Live Trading<br>Chat Room</p>
+                <div class="account__box  account__box--reviews">
+                  <b>Daily Reviews</b>
                 </div>
-                <div class="account__box  account__box--book">
-                  <p>Trading<br>Book</p>
+                <div class="account__box  account__box--weekly">
+                  <b>Weekly Reviews</b>
+                </div>
+                <div class="account__box  account__box--room">
+                  <b>1 Month Trading Room Access</b>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--second  account__flex--edge">
+                <div class="account__box  account__box--webinar">
+                  <b>1 Month Webinar Access</b>
                 </div>
                 <div class="account__box  account__box--demo">
-                  <p>Demo Training<br>Account</p>
+                  <b>Demo Training Account</b>
+                </div>
+                <div class="account__box  account__box--analysis">
+                  <b>Technical Analysis - The Basic</b>
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
@@ -110,38 +114,39 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="account__wrapper">
-        <div class="container">
+        <div class="account__wrapper  account__wrapper--advanced">
           <div class="account__flex">
-            <div class="account__img  account__img--student">
-              <p><b>Student</b> Program</p>
+            <div class="account__img  account__img--advanced">
+              <p><b>Advanced</b> Program</p>
             </div>
             <div class="account__desc">
               <b class="account__name">Description</b>
-              <p class="account__text">Tradenet's INTRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Tradenet's ADVANCED program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex">
-                <div class="account__box  account__box--self">
-                  <p>Self-Stude<br>Course</p>
+              <div class="account__flex  account__flex--edge">
+                <div class="account__box  account__box--video">
+                  <b>Unlimited Online Videos Lessons Pack 1+2</b>
                 </div>
-                <div class="account__box  account__box--chat">
-                  <p>Live Trading<br>Chat Room</p>
+                <div class="account__box  account__box--reviews">
+                  <b>Daily Reviews</b>
                 </div>
-                <div class="account__box  account__box--book">
-                  <p>Trading<br>Book</p>
+                <div class="account__box  account__box--weekly">
+                  <b>Weekly Reviews</b>
                 </div>
-                <div class="account__box  account__box--demo">
-                  <p>Demo Training<br>Account</p>
+                <div class="account__box  account__box--room">
+                  <b>1 Month Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--around">
-                <div class="account__box  account__box--mentor">
-                  <p>1-Month<br>Mentorship</p>
+              <div class="account__flex  account__flex--second  account__flex--edge">
+                <div class="account__box  account__box--webinar">
+                  <b>1 Month Webinar Access</b>
                 </div>
-                <div class="account__box  account__box--star">
-                  <p>Star Trader<br>Course</p>
+                <div class="account__box  account__box--demo">
+                  <b>Demo Training Account</b>
+                </div>
+                <div class="account__box  account__box--analysis">
+                  <b>Technical Analysis - The Basic</b>
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
@@ -149,41 +154,39 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="account__wrapper  account__wrapper--blue">
-        <div class="container">
+        <div class="account__wrapper  account__wrapper--expert">
           <div class="account__flex">
             <div class="account__img  account__img--expert">
               <p><b>Expert</b> Program</p>
             </div>
             <div class="account__desc">
               <b class="account__name">Description</b>
-              <p class="account__text">Tradenet's INTRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Tradenet's EXPERT program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex">
-                <div class="account__box  account__box--self">
-                  <p>Self-Stude<br>Course</p>
+              <div class="account__flex  account__flex--edge">
+                <div class="account__box  account__box--video">
+                  <b>Unlimited Online Videos Lessons Pack 1+2</b>
                 </div>
-                <div class="account__box  account__box--chat">
-                  <p>Live Trading<br>Chat Room</p>
+                <div class="account__box  account__box--reviews">
+                  <b>Daily Reviews</b>
                 </div>
-                <div class="account__box  account__box--book">
-                  <p>Trading<br>Book</p>
+                <div class="account__box  account__box--weekly">
+                  <b>Weekly Reviews</b>
                 </div>
-                <div class="account__box  account__box--demo">
-                  <p>Demo Training<br>Account</p>
+                <div class="account__box  account__box--room">
+                  <b>1 Month Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--around">
-                <div class="account__box  account__box--mentor">
-                  <p>1-Month<br>Mentorship</p>
+              <div class="account__flex  account__flex--second  account__flex--edge">
+                <div class="account__box  account__box--webinar">
+                  <b>1 Month Webinar Access</b>
                 </div>
-                <div class="account__box  account__box--star">
-                  <p>Star Trader<br>Course</p>
+                <div class="account__box  account__box--demo">
+                  <b>Demo Training Account</b>
                 </div>
-                <div class="account__box  account__box--forex">
-                  <p>Forex Trader<br>Course</p>
+                <div class="account__box  account__box--analysis">
+                  <b>Technical Analysis - The Basic</b>
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
@@ -191,44 +194,79 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="account__wrapper">
-        <div class="container">
+        <div class="account__wrapper  account__wrapper--pro">
           <div class="account__flex">
             <div class="account__img  account__img--pro">
               <p><b>Pro</b> Program</p>
             </div>
             <div class="account__desc">
               <b class="account__name">Description</b>
-              <p class="account__text">Tradenet's INTRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Tradenet's PRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex">
-                <div class="account__box  account__box--self">
-                  <p>Self-Stude<br>Course</p>
+              <div class="account__flex  account__flex--edge">
+                <div class="account__box  account__box--video">
+                  <b>Unlimited Online Videos Lessons Pack 1+2</b>
                 </div>
-                <div class="account__box  account__box--chat">
-                  <p>Live Trading<br>Chat Room</p>
+                <div class="account__box  account__box--reviews">
+                  <b>Daily Reviews</b>
                 </div>
-                <div class="account__box  account__box--book">
-                  <p>Trading<br>Book</p>
+                <div class="account__box  account__box--weekly">
+                  <b>Weekly Reviews</b>
                 </div>
-                <div class="account__box  account__box--demo">
-                  <p>Demo Training<br>Account</p>
+                <div class="account__box  account__box--room">
+                  <b>1 Month Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second">
-                <div class="account__box  account__box--mentor">
-                  <p>1-Month<br>Mentorship</p>
+              <div class="account__flex  account__flex--second  account__flex--edge">
+                <div class="account__box  account__box--webinar">
+                  <b>1 Month Webinar Access</b>
                 </div>
-                <div class="account__box  account__box--star">
-                  <p>Star Trader<br>Course</p>
+                <div class="account__box  account__box--demo">
+                  <b>Demo Training Account</b>
                 </div>
-                <div class="account__box  account__box--forex">
-                  <p>Forex Trader<br>Course</p>
+                <div class="account__box  account__box--analysis">
+                  <b>Technical Analysis - The Basic</b>
                 </div>
-                <div class="account__box  account__box--top">
-                  <p>Top Trader<br>Course</p>
+              </div>
+              <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
+              <a class="button  button--small  button--transparent  account__button" href="#">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="account__wrapper  account__wrapper--ultimate">
+          <div class="account__flex">
+            <div class="account__img  account__img--ultimate">
+              <p><b>Ultimate</b> Program</p>
+            </div>
+            <div class="account__desc">
+              <b class="account__name">Description</b>
+              <p class="account__text">Tradenet's ULTIMATE program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
+              <b class="account__name">Program Include</b>
+              <div class="account__flex  account__flex--edge">
+                <div class="account__box  account__box--video">
+                  <b>Unlimited Online Videos Lessons Pack 1+2</b>
+                </div>
+                <div class="account__box  account__box--reviews">
+                  <b>Daily Reviews</b>
+                </div>
+                <div class="account__box  account__box--weekly">
+                  <b>Weekly Reviews</b>
+                </div>
+                <div class="account__box  account__box--room">
+                  <b>1 Month Trading Room Access</b>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--second  account__flex--edge">
+                <div class="account__box  account__box--webinar">
+                  <b>1 Month Webinar Access</b>
+                </div>
+                <div class="account__box  account__box--demo">
+                  <b>Demo Training Account</b>
+                </div>
+                <div class="account__box  account__box--analysis">
+                  <b>Technical Analysis - The Basic</b>
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
