--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Pro Program - Investix</title>
+  <title>Advanced Program - Investix</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -33,21 +33,13 @@
               <a class="nav__active" href="account.html">Account Programs</a>
               <ul class="nav__sublist">
                 <li><a href="basic.html">Basic Program</a></li>
-                <li><a href="advanced.html">Advanced Program</a></li>
+                <li><a class="nav__active">Advanced Program</a></li>
                 <li><a href="expert.html">Expert Program</a></li>
-                <li><a class="nav__active">Pro Program</a></li>
+                <li><a href="pro.html">Pro Program</a></li>
                 <li><a href="ultimate.html">Ultimate Program</a></li>
               </ul>
             </li>
-            <li>
-              <a href="#">Education</a>
-              <ul class="nav__sublist">
-                <li><a href="#">Intro Program</a></li>
-                <li><a href="#">Student Program</a></li>
-                <li><a href="#">Expert Program</a></li>
-                <li><a href="#">Pro Program</a></li>
-              </ul>
-            </li>
+            <li><a href="#">Education</a></li>
             <li><a href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
             <li><a href="#">Contacts</a></li>
@@ -63,7 +55,7 @@
   <main class="account-programs">
     <section class="account-programs__title">
       <div class="container">
-        <h1 class="account-programs__name">Pro Program</h1>
+        <h1 class="account-programs__name">Advanced Program</h1>
       </div>
     </section>
     <section class="account-programs__desc">
@@ -71,12 +63,12 @@
         <div class="account-programs__flex">
           <div class="account-programs__left">
             <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $4,999 PRO Program is our premier program. It has all of the tools needed to make it as a professional trader. You receive all of the benefits of the INTRO, STUDENT, EXPERT programs with 3 months of mentorship, plus the Top Trader Course and the ability to apply for a funded $240,000 trading account.</p>
-            <p class="account-programs__price">Price <b>$4999</b></p>
+            <p class="account-programs__text">The $1,500 ADVANCED Program takes you to the next step in your journey to become a trader. You’ll receive all the benefits of the INTRO program, an excellent day trading course for beginners, plus the following: 1 months of Mentorship, the Star Trader Course, and be eligible to apply for a funded $80,000 trading account.</p>
+            <p class="account-programs__price">Price <b>$1500</b></p>
             <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
             <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
           </div>
-          <div class="account-programs__right  account-programs__right--pro"></div>
+          <div class="account-programs__right  account-programs__right--advanced"></div>
         </div>
       </div>
     </section>
@@ -84,7 +76,7 @@
       <div class="container">
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--video">
-            <b>Unlimited Online Videos<br>Lessons All Packages</b>
+            <b>Unlimited Online Videos<br>Lessons Pack 1+2+3</b>
           </div>
           <div class="account-programs__box  account-programs__box--reviews">
             <b>Daily Reviews</b>
@@ -93,46 +85,26 @@
             <b>Weekly Reviews</b>
           </div>
           <div class="account-programs__box  account-programs__box--room">
-            <b>1 Year Trading<br>Room Access</b>
+            <b>3 Month Trading<br>Room Access</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--webinar">
-            <b>1 Year Webinar<br>Access</b>
+            <b>3 Month Webinar<br>Access</b>
           </div>
           <div class="account-programs__box  account-programs__box--demo">
             <b>Demo Training<br>Account</b>
           </div>
           <div class="account-programs__box  account-programs__box--analysis">
-            <b>Technical Analysis (Expert) + Price Action + Turtle Trading</b>
+            <b>Technical Analysis -<br>The Basic + Advanced</b>
           </div>
           <div class="account-programs__box  account-programs__box--online">
-            <b>Learn Advanced<br>Trading Strategies</b>
+            <b>Learn Online<br>Advanced Strategies</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--risk">
             <b>Risk Management<br>Tools</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--session">
-            <b>Weekly Group<br>Mentoring Sessions</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--risk">
-            <b>Risk Management<br>Tools</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--signal">
-            <b>Daily Signals</b>
-          </div>
-        </div>
-        <div class="account-programs__flex  account-programs__flex--around">
-          <div class="account-programs__box  account-programs__box--live">
-            <b>Three Live 3-hours<br>Online Sessions 1:1</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--pers">
-            <b>Personal Mentoring</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--risk">
-            <b><strong>Bonus:</strong> CryptoCurrecy Intro and Basic Trading</b>
           </div>
         </div>
       </div>
@@ -485,9 +457,9 @@
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
           <li><a href="basic.html">Basic Program</a></li>
-          <li><a href="advanced.html">Advanced Program</a></li>
+          <li><a class="footer__active">Advanced Program</a></li>
           <li><a href="expert.html">Expert Program</a></li>
-          <li><a class="footer__active">Pro Program</a></li>
+          <li><a href="pro.html">Pro Program</a></li>
           <li><a href="ultimate.html">Ultimate Program</a></li>
         </ul>
         <ul class="footer__list">
