--- a/investix/account-programs/ultimate.html
+++ b/investix/account-programs/ultimate.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Student Program - Investix</title>
+  <title>Ultimate Program - Investix</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -32,21 +32,14 @@
             <li>
               <a class="nav__active" href="account.html">Account Programs</a>
               <ul class="nav__sublist">
-                <li><a href="intro.html">Intro Program</a></li>
-                <li><a class="nav__active">Student Program</a></li>
+                <li><a href="basic.html">Basic Program</a></li>
+                <li><a href="advanced.html">Advanced Program</a></li>
                 <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
+                <li><a class="nav__active">Ultimate Program</a></li>
               </ul>
             </li>
-            <li>
-              <a href="#">Education</a>
-              <ul class="nav__sublist">
-                <li><a href="#">Intro Program</a></li>
-                <li><a href="#">Student Program</a></li>
-                <li><a href="#">Expert Program</a></li>
-                <li><a href="#">Pro Program</a></li>
-              </ul>
-            </li>
+            <li><a href="#">Education</a></li>
             <li><a href="#">Chat Room</a></li>
             <li><a href="#">Trading Tools</a></li>
             <li><a href="#">Contacts</a></li>
@@ -62,7 +55,7 @@
   <main class="account-programs">
     <section class="account-programs__title">
       <div class="container">
-        <h1 class="account-programs__name">Student Program</h1>
+        <h1 class="account-programs__name">Ultimate Program</h1>
       </div>
     </section>
     <section class="account-programs__desc">
@@ -70,70 +63,65 @@
         <div class="account-programs__flex">
           <div class="account-programs__left">
             <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $2,699 STUDENT Program takes you to the next step in your journey to become a trader. You’ll receive all the benefits of the INTRO program, an excellent day trading course for beginners, plus the following: 1 months of Mentorship, the Star Trader Course, and be eligible to apply for a funded $80,000 trading account.</p>
-            <p class="account-programs__price">Price <b>$2699</b></p>
+            <p class="account-programs__text">The $5,999 ULTIMATE Program is our premier program. It has all of the tools needed to make it as a professional trader. You receive all of the benefits of the INTRO, STUDENT, EXPERT programs with 3 months of mentorship, plus the Top Trader Course and the ability to apply for a funded $240,000 trading account.</p>
+            <p class="account-programs__price">Price <b>$5999</b></p>
             <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
             <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
           </div>
-          <div class="account-programs__right  account-programs__right--student"></div>
+          <div class="account-programs__right  account-programs__right--ultimate"></div>
         </div>
       </div>
     </section>
     <section class="account-programs__edge">
       <div class="container">
         <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--self">
-            <b>Self-Study<br>Course</b>
-            <ul>
-              <li>- Online trading course</li>
-              <li>- Dozens of learning units</li>
-              <li>- Training videos</li>
-              <li>- Interactive sessions and tests</li>
-              <li>- Available 24/7</li>
-            </ul>
+          <div class="account-programs__box  account-programs__box--video">
+            <b>Unlimited Online Videos<br>Lessons All Packages</b>
           </div>
-          <div class="account-programs__box  account-programs__box--chat">
-            <b>Live Trading<br>Chat Room</b>
-            <ul>
-              <li>- Trade live with our top analysts</li>
-              <li>- Watch & Learn to improve your trading skills</li>
-              <li>- Copy-trade and learn better trading strategies</li>
-              <li>- 1-Month membership</li>
-            </ul>
+          <div class="account-programs__box  account-programs__box--reviews">
+            <b>Daily Reviews</b>
           </div>
-          <div class="account-programs__box  account-programs__box--book">
-            <b>Trading<br>Book</b>
-            <ul>
-              <li>- “The Market Whisperer” trading book, a best seller by Meir Barak, is included in this package. You will get online access to the book in eight different languages!</li>
-            </ul>
+          <div class="account-programs__box  account-programs__box--weekly">
+            <b>Weekly Reviews</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--room">
+            <b>1 Year Trading<br>Room Access</b>
           </div>
         </div>
-        <div class="account-programs__flex  account-programs__flex--second">
+        <div class="account-programs__flex">
+          <div class="account-programs__box  account-programs__box--webinar">
+            <b>1 Year Webinar<br>Access</b>
+          </div>
           <div class="account-programs__box  account-programs__box--demo">
             <b>Demo Training<br>Account</b>
-            <ul>
-              <li>- Proficient in the use of the trading platform</li>
-              <li>- Get familiar with advanced trading features</li>
-              <li>- Easily test all trading platform functions</li>
-            </ul>
           </div>
-          <div class="account-programs__box  account-programs__box--mentor">
-            <b>1-Month<br>Mentorship</b>
-            <ul>
-              <li>- Weekly Mentorship Meeting</li>
-              <li>- Trading Room Live Mentoring</li>
-              <li>- Comprehensive Training Sessions</li>
-            </ul>
+          <div class="account-programs__box  account-programs__box--analysis">
+            <b>Technical Analysis + Price Action + Turtle Trading</b>
           </div>
-          <div class="account-programs__box  account-programs__box--star">
-            <b>Star Trader<br>Course</b>
-            <ul>
-              <li>- 18-Hour Online Sessions</li>
-              <li>- Access to Recorded Materials</li>
-              <li>- Calculated Risk Trading</li>
-              <li>- Trading Room Live Mentoring</li>
-              <li>- Comprehensive Training Sessions</li>
-            </ul>
+          <div class="account-programs__box  account-programs__box--online">
+            <b>Learn Advanced<br>Trading Strategies</b>
+          </div>
+        </div>
+        <div class="account-programs__flex">
+          <div class="account-programs__box  account-programs__box--risk">
+            <b>Risk Management<br>Tools</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--session">
+            <b>Weekly Group<br>Mentoring Sessions</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--risk">
+            <b>Risk Management<br>Tools</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--signal">
+            <b>Daily Signals</b>
+          </div>
+        </div>
+        <div class="account-programs__flex  account-programs__flex--around">
+          <div class="account-programs__box  account-programs__box--live">
+            <b>Three Live 3-hours<br>Online Sessions 1:1</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--pers">
+            <b>Personal Mentoring</b>
           </div>
         </div>
       </div>
@@ -144,17 +132,17 @@
       <h1 class="services__title">We will show you the way!</h1>
       <p class="services__subtitle">Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
       <div class="services__flex">
-        <div class="services__box  services__box--intro">
+        <div class="services__box  services__box--basic">
           <p class="services__name">
-            <b>Intro</b>
+            <b>Basic</b>
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
           <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
         </div>
-        <div class="services__box  services__box--student">
+        <div class="services__box  services__box--advanced">
           <p class="services__name">
-            <b>Student</b>
+            <b>Advanced</b>
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
@@ -171,6 +159,14 @@
         <div class="services__box  services__box--pro">
           <p class="services__name">
             <b>Pro</b>
+            Program
+          </p>
+          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
+          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
+        </div>
+        <div class="services__box  services__box--ultimate">
+          <p class="services__name">
+            <b>Ultimate</b>
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
@@ -477,10 +473,11 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="intro.html">Intro Program</a></li>
-          <li><a class="footer__active">Student Program</a></li>
+          <li><a href="basic.html">Basic Program</a></li>
+          <li><a href="advanced.html">Advanced Program</a></li>
           <li><a href="expert.html">Expert Program</a></li>
-          <li><a href="pro.html">Pro Program</a></li>
+          <li><a class="footer__active">Pro Program</a></li>
+          <li><a href="ultimate.html">Ultimate Program</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
